# cppTemplate

./: CMakeLists.txt  README.md
include/: glad.c
include/glad/: glad.h
src/: main.cpp
